--- a/app/src/main/res/layout/activity_create_car.xml
+++ b/app/src/main/res/layout/activity_create_car.xml
@@ -10,11 +10,11 @@
     tools:context=".activites.CreateCarActivity">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/create_car_activity_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="15dp"
-        android:text="Add new car"
+        android:text="Add new Car"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="24sp" />
@@ -121,6 +121,7 @@
         android:id="@+id/button_add_car"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingVertical="12dp"
         android:layout_marginTop="10dp"
         android:text="Add" />
 </LinearLayout>
