--- a/app/src/main/res/layout/activity_create_make.xml
+++ b/app/src/main/res/layout/activity_create_make.xml
@@ -35,5 +35,6 @@
         android:id="@+id/button_add"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingVertical="12dp"
         android:text="Add" />
 </LinearLayout>
